* vm_soft_fault() no longer sets all pages it touches to "active"; instead, it now honours   if the page was already in the "modified" list before. Also, the source page (which is   either mapped directly or copied to the target page) is no longer marked busy before its   final destiny is decided (it didn't have any effect, anyway, since we had its cache   locked for the whole time, but it now preserves the modified state). This fixes bug #1369. * vm_cache_write_modified() now filters out temporary caches (it's currently called on area   deletion).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21971 a95241bf-73f2-0310-859d-f6bbb57e9c96